--- a/css/styles.css
+++ b/css/styles.css
@@ -1,32 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
+@import "reset.css";
+@import "status-bar.css";
 
 body {
     font-family: "Open Sans", sans-serif;
 }
 
-.status-bar {
+.welcome-header {
+    margin: 90px 0px;
+    text-align: center;
     display: flex;
-    justify-content: center;
-}
-
-.status-bar__column {
-    width: 33%;
-}
-
-.status-bar__column:nth-child(2) {
-    display: flex;
-    justify-content: center;
-}
-
-.status-bar__column:last-child {
-    display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
     align-items: center;
-}
-.status-bar__column:first-child span {
-    margin-right: 5px;
+    font-weight: 600;
 }
 
-.status-bar__column .fa-battery-full {
-    margin: 0px 5px;
+.welcome-header__title {
+    font-size: 25px;
+    margin-bottom: 20px;
+    letter-spacing: -1px;
+}
+
+.welcome-header__text {
+    width: 60%;
+    opacity: 0.7;
 }
