--- a/css/styles.css
+++ b/css/styles.css
@@ -23,8 +23,9 @@ body {
 }
 
 .welcome-header__text {
-    width: 60%;
-    opacity: 0.7;
+    width: 70%;
+    opacity: 0.5;
+    font-size: 17px;
 }
 
 #login-form {
@@ -35,10 +36,13 @@ body {
 
 #login-form input {
     padding: 15px 0px;
-    font-size: 18px;
+    font-size: 20px;
     border: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    margin-bottom: 30px;
+    margin-bottom: 35px;
+}
+
+#login-form input:not([type="submit"]) {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
     transition: border-color 0.3s ease-in-out;
 }
 
@@ -48,4 +52,23 @@ body {
 
 #login-form input:focus {
     border-color: var(--yellow);
+}
+
+#login-form input[type="submit"] {
+    background-color: var(--yellow);
+    cursor: pointer;
+    padding: 17px 0px;
+    border-radius: 5px;
+    margin-bottom: 15px;
+}
+
+#login-form input[value="Sign Up"] {
+    margin-bottom: 22px;
+}
+
+#login-form a {
+    text-align: center;
+    text-decoration: none;
+    color: inherit;
+    font-size: 15px;
 }
