--- a/css/styles.css
+++ b/css/styles.css
@@ -1,74 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
 @import "reset.css";
 @import "variables.css";
-@import "status-bar.css";
+
+/* Components */
+@import "components/status-bar.css";
+
+/* Screens */
+@import "screens/login.css";
 
 body {
     font-family: "Open Sans", sans-serif;
-}
-
-.welcome-header {
-    margin: 90px 0px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-weight: 600;
-}
-
-.welcome-header__title {
-    font-size: 25px;
-    margin-bottom: 20px;
-    letter-spacing: -1px;
-}
-
-.welcome-header__text {
-    width: 70%;
-    opacity: 0.5;
-    font-size: 17px;
-}
-
-#login-form {
-    display: flex;
-    flex-direction: column;
-    margin: 0px 30px;
-}
-
-#login-form input {
-    padding: 15px 0px;
-    font-size: 20px;
-    border: none;
-    margin-bottom: 35px;
-}
-
-#login-form input:not([type="submit"]) {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-    transition: border-color 0.3s ease-in-out;
-}
-
-#login-form input::placeholder {
-    color: rgba(0, 0, 0, 0.4);
-}
-
-#login-form input:focus {
-    border-color: var(--yellow);
-}
-
-#login-form input[type="submit"] {
-    background-color: var(--yellow);
-    cursor: pointer;
-    padding: 17px 0px;
-    border-radius: 5px;
-    margin-bottom: 15px;
-}
-
-#login-form input[value="Sign Up"] {
-    margin-bottom: 22px;
-}
-
-#login-form a {
-    text-align: center;
-    text-decoration: none;
-    color: inherit;
-    font-size: 15px;
 }
