--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,6 +1,15 @@
 .nav {
     background-color: #f9f9fa;
     padding: 20px 50px;
+    bottom: 0;
+    position: fixed;
+    width: 100%;
+    box-sizing: border-box;
+    border-top: 1px solid rgba(121, 121, 121, 0.3);
+}
+
+.nav__link {
+    color: #2e363e;
 }
 
 .nav__list {
