--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,6 +1,6 @@
 .nav {
     background-color: #f9f9fa;
-    padding: 20px 50px;
+    padding: 15px 50px;
     bottom: 0;
     position: fixed;
     width: 100%;
@@ -10,9 +10,35 @@
 
 .nav__link {
     color: #2e363e;
+    position: relative;
+    font-size: 14px;
 }
 
 .nav__list {
     display: flex;
     justify-content: space-between;
+}
+
+.nav__notofication {
+    background-color: tomato;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 12px;
+    color: white;
+    font-weight: 600;
+    position: absolute;
+    left: 18px;
+    bottom: 13px;
+}
+
+.nav__dot {
+    background-color: tomato;
+    width: 6px;
+    height: 6px;
+    position: absolute;
+    border-radius: 50%;
+    left: 28px;
 }
