--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -2,14 +2,13 @@
 .user-component__column:first-child {
     display: flex;
     align-items: center;
-    padding: 0px 10px;
 }
 
 .user-component__avatar {
     width: 70px;
     height: 70px;
     border-radius: 30px;
-    border: 0.1px solid rgba(0, 0, 0, 0.1);
+    border: 0.1px solid rgba(0, 0, 0, 0.05);
     object-fit: cover;
     margin-right: 15px;
 }
@@ -24,4 +23,9 @@
     font-weight: 500;
     font-size: 17px;
     color: rgba(0, 0, 0, 0.4);
+}
+
+.user-component__avatar--xl {
+    width: 80px;
+    height: 80px;
 }
