Finishing Friends Screen

--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,3 +1,7 @@
+.user-component {
+    justify-content: space-between;
+}
+
 .user-component,
 .user-component__column:first-child {
     display: flex;
@@ -28,4 +32,31 @@
 .user-component__avatar--xl {
     width: 80px;
     height: 80px;
+}
+
+.user-component__avatar--sm {
+    width: 60px;
+    height: 60px;
+    border: none;
+    border-radius: 25px;
+}
+
+.user-component__title--not-bold {
+    font-weight: 500;
+    font-size: 20px;
+}
+
+.user-component__column:last-child {
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    margin-right: 15px;
+    color: rgba(0, 0, 0, 0.4);
+    font-size: 17px;
+}
+
+.user-component__column:last-child i {
+    font-size: 13px;
+    margin-bottom: 2px;
+    margin-left: 15px;
 }
