--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -21,6 +21,12 @@
     font-size: 21px;
 }
 
+.user-component__title--sm {
+    font-weight: 600;
+    letter-spacing: -0.3px;
+    font-size: 21px;
+}
+
 .user-component__subtitle {
     margin-top: 8px;
     font-weight: 500;
@@ -60,4 +66,23 @@
     font-size: 13px;
     margin-bottom: 2px;
     margin-left: 15px;
+}
+
+.user-component__column--chats {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.user-component__column--chats div {
+    font-weight: 500;
+    font-size: 14px;
+}
+
+.user-component__time {
+    margin-bottom: 10px;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.3);
+    font-weight: 600;
+    display: block;
 }
