--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -1,15 +1,62 @@
 .find-icons {
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    margin-top: 20px;
+    align-items: center;
 }
 
 .find-icons__icon {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 20%;
+    margin-bottom: 35px;
+}
+
+.find-icons__icon-contact {
+    position: relative;
+}
+
+.contact-img {
+    position: absolute;
+    margin-top: -30px;
 }
 
 .find-icons__icon span {
-    margin-top: 20px;
+    margin-top: 25px;
+    font-weight: 600;
+    font-size: 17px;
+    display: flex;
+}
+
+.contact {
+    flex-direction: column;
+    margin-bottom: -40px;
+}
+
+.contact em {
+    margin-left: 8px;
+    margin-bottom: -13px;
+}
+
+.recommended-friends {
+    padding: 25px 0px;
+    border-top: var(--main-border);
+    border-bottom: var(--main-border);
+}
+
+.recommended-friends__title {
+    font-size: 15.5px;
+    color: rgba(0, 0, 0, 0.4);
+    font-weight: 600;
+}
+
+.recommended-friends span {
+    margin: 105px 0px;
+    display: block;
+    text-align: center;
+    font-weight: 500;
+
+    color: rgba(0, 0, 0, 0.4);
+    font-size: 18px;
 }
