--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -52,11 +52,85 @@
 }
 
 .recommended-friends span {
-    margin: 105px 0px;
+    margin: 100px 0px;
     display: block;
     text-align: center;
     font-weight: 500;
-
     color: rgba(0, 0, 0, 0.4);
     font-size: 18px;
+}
+
+.open-chat__header {
+    display: flex;
+    justify-content: space-between;
+    opacity: 0.6;
+    padding: 20px 0px;
+    font-weight: 500;
+}
+
+.open-chat__header span {
+    position: relative;
+    opacity: 0.7;
+    margin-right: 15px;
+    display: flex;
+}
+
+.open-chat__header span i {
+    position: absolute;
+    opacity: 0.7;
+    font-size: 14px;
+    margin-left: 173px;
+    margin-top: 2px;
+}
+
+.open-post {
+    display: flex;
+}
+
+.open-post__title {
+    font-weight: 600;
+    margin-top: 20px;
+    margin-bottom: 8px;
+    font-size: 20px;
+}
+
+.open-post__hashtags {
+    text-transform: uppercase;
+    font-size: 17.5px;
+    font-weight: 500;
+    opacity: 0.5;
+}
+
+.open-post__members {
+    margin-top: 7px;
+    display: flex;
+    align-items: center;
+}
+
+.open-post__members img {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+    border-radius: 50%;
+}
+
+.open-post__member-count {
+    opacity: 0.6;
+    font-size: 15px;
+    font-weight: 500;
+    letter-spacing: 0.3px;
+}
+
+.open-post__members .divider {
+    width: 2px;
+    height: 14px;
+    margin: 0 7px;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.open-post__member-status {
+    color: #ec6dba;
+    font-weight: 500;
+    font-size: 15px;
+    letter-spacing: 0.5px;
 }
