--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -51,5 +51,27 @@
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     padding-top: 30px;
     font-weight: 600;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
+}
+
+.more-suggestions__icons {
+    margin-left: 13px;
+    display: flex;
+}
+
+.more-suggestions__icon {
+    margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.more-suggestions__icon span {
+    font-size: 15px;
+    font-weight: 600;
+    opacity: 0.6;
+}
+
+.more-suggestions__icon-image {
+    margin-bottom: 7px;
 }
