--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,3 +1,35 @@
 #chat-screen {
     background-color: #abc1d1;
+    height: 1000vh;
+}
+
+#chat-screen .alt-header,
+#chat-screen .status-bar {
+    background-color: #abc1d1;
+    top: 0;
+    position: fixed;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+#chat-screen .alt-header {
+    top: 25px;
+    z-index: 1;
+}
+
+.main-chat {
+    margin-top: 100px;
+}
+
+#chat-screen .status-bar {
+    z-index: 2;
+}
+
+.background-bar {
+    width: 100%;
+    height: 10px;
+    background-color: #abc1d1;
+    margin-top: -75px;
+    position: fixed;
+    z-index: 2;
 }
