--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -19,6 +19,9 @@
 
 .main-chat {
     margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #chat-screen .status-bar {
@@ -32,4 +35,14 @@
     margin-top: -75px;
     position: fixed;
     z-index: 2;
+}
+
+.chat__timestamp {
+    color: white;
+    background-color: #92a4b2;
+    padding: 9px 15px;
+    font-weight: 300;
+    letter-spacing: 0.8px;
+    border-radius: 30px;
+    font-size: 13.5px;
 }
