--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -45,4 +45,49 @@
     letter-spacing: 0.8px;
     border-radius: 30px;
     font-size: 13.5px;
+    margin-bottom: 25px;
+}
+
+.message-row {
+    width: 100%;
+    display: flex;
+}
+
+.message-row img {
+    width: 47px;
+    height: 47px;
+    object-fit: cover;
+    border-radius: 20px;
+    margin-right: 6px;
+    margin-left: -5px;
+}
+
+.message__author {
+    opacity: 0.8;
+    font-size: 15px;
+    margin-bottom: 10px;
+    display: block;
+    font-weight: 500;
+    margin-top: 5px;
+}
+
+.message__info {
+    display: flex;
+    align-items: flex-end;
+}
+
+.message__bubble {
+    background-color: white;
+    padding: 13px;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 15px;
+    border-top-left-radius: 0px;
+    margin-right: 7px;
+}
+
+.message__time {
+    opacity: 0.7;
+    font-size: 12px;
+    font-weight: 600;
 }
