--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -51,6 +51,7 @@
 .message-row {
     width: 100%;
     display: flex;
+    margin-bottom: 25px;
 }
 
 .message-row img {
@@ -90,4 +91,21 @@
     opacity: 0.7;
     font-size: 12px;
     font-weight: 600;
+}
+
+.message-row--own {
+    justify-content: flex-end;
+}
+
+.message-row--own .message__bubble {
+    background-color: var(--yellow);
+    border-top-right-radius: 0px;
+    border-top-left-radius: 15px;
+    order: 1;
+    margin-right: -10px;
+}
+
+.message-row--own .message__time {
+    order: 0;
+    margin-right: 7px;
 }
