--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -109,3 +109,73 @@
     order: 0;
     margin-right: 7px;
 }
+
+.reply {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 6px 25px;
+    box-sizing: border-box;
+    align-items: center;
+}
+
+.reply .reply__column:first-child {
+    width: 10%;
+}
+.reply .reply__column:last-child {
+    width: 90%;
+    position: relative;
+}
+
+.reply__column:first-child {
+    margin-left: -8px;
+}
+
+.reply input {
+    padding: 15px;
+    width: 95%;
+    border: var(--main-border);
+    border-radius: 23px;
+    background-color: #f8f7f6;
+    border: 1.5px solid rgba(0, 0, 0, 0.2);
+}
+
+.reply__column input::placeholder {
+    font-size: 20px;
+    font-weight: 500;
+    color: black;
+}
+
+.reply__column:last-child > img,
+.reply__column:last-child button {
+    position: absolute;
+    right: 0;
+    top: 3px;
+}
+
+.reply__column:last-child button {
+    position: absolute;
+    right: -10px;
+}
+
+.reply__column:last-child > img {
+    right: 45px;
+    top: 8px;
+}
+
+.reply__column button {
+    background-color: var(--yellow);
+    border: none;
+    width: 42px;
+    height: 42px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.reply__column button:focus,
+.reply__column button:active {
+    outline: none;
+}
