Splash Screen part One

--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -47,3 +47,15 @@
     font-size: 14px;
     font-weight: 600;
 }
+
+#splash-screen {
+    background-color: var(--yellow);
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 130px;
+}
