Splash Screen part Two

--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -48,6 +48,16 @@
     font-weight: 600;
 }
 
+@keyframes hideSplashScreen {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
 #splash-screen {
     background-color: var(--yellow);
     position: absolute;
@@ -58,4 +68,7 @@
     justify-content: center;
     align-items: center;
     font-size: 130px;
+    color: #341d1b;
+    animation: hideSplashScreen 0.4s ease-in-out forwards;
+    animation-delay: 1s;
 }
