--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -19,10 +19,23 @@
     justify-content: space-between;
 }
 
+@keyframes notificationAnimation {
+    0% {
+        transform: none;
+    }
+    50% {
+        transform: translateY(-5px) rotateY(360deg);
+    }
+    100% {
+        transform: none;
+    }
+}
+
 .nav__notofication {
     position: absolute;
     left: 18px;
     bottom: 13px;
+    animation: notificationAnimation 3s ease-in-out infinite;
 }
 
 .nav__dot {
@@ -33,4 +46,30 @@
     border-radius: 50%;
     left: 26px;
     bottom: 23px;
+}
+
+@keyframes appearBtnAnimation {
+    from {
+        opacity: 0;
+    }
+    to {
+        transform: none;
+        opacity: 1;
+    }
+}
+
+.nav__btn {
+    transform: translateY(45px);
+    opacity: 0;
+    animation: appearBtnAnimation 0.5s ease-in-out forwards;
+}
+
+.nav__btn:nth-child(2) {
+    animation-delay: 0.3s;
+}
+.nav__btn:nth-child(3) {
+    animation-delay: 0.6s;
+}
+.nav__btn:last-child {
+    animation-delay: 0.9s;
 }
