--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -16,3 +16,16 @@
     position: relative;
     font-size: 18px;
 }
+
+@keyframes rotateCog {
+    from {
+        transform: none;
+    }
+    to {
+        transform: rotateZ(360deg);
+    }
+}
+
+.screen-header__icons .fa-gear:hover {
+    animation: rotateCog 2s linear infinite;
+}
