--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -173,6 +173,26 @@
     margin-left: -1px;
 }
 
+@keyframes heartBeat {
+    0% {
+        color: white;
+        transform: none;
+    }
+    50% {
+        color: tomato;
+        transform: scale(1.5);
+    }
+    100% {
+        color: white;
+        transform: none;
+    }
+}
+
+.open-post__heart-count:hover i {
+    will-change: transform;
+    animation: heartBeat 1s linear infinite;
+}
+
 .open-post__one {
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0px 0px 16px 0px;
