Animating Chats Screen

--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,6 +1,6 @@
 #chat-screen {
     background-color: #abc1d1;
-    height: 1000vh;
+    height: 500vh;
 }
 
 #chat-screen .alt-header,
@@ -17,11 +17,45 @@
     z-index: 1;
 }
 
+@keyframes message-row {
+    from {
+        opacity: 0;
+        transform: translateX(-10px);
+    }
+    to {
+        opacity: 1;
+        transform: none;
+    }
+}
+
+.message-row {
+    width: 100%;
+    display: flex;
+    margin-bottom: 25px;
+    animation: message-row 1s ease-in-out;
+}
+
+@keyframes message-row--own {
+    from {
+        opacity: 0;
+        transform: translateX(10px);
+    }
+    to {
+        opacity: 1;
+        transform: none;
+    }
+}
+.message-row--own {
+    justify-content: flex-end;
+    animation: message-row--own 1s ease-in-out;
+}
+
 .main-chat {
     margin-top: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    animation: fadeIn 0.8s linear;
 }
 
 #chat-screen .status-bar {
@@ -120,6 +154,7 @@
     padding: 6px 25px;
     box-sizing: border-box;
     align-items: center;
+    transition: all 0.3s ease-in-out;
 }
 
 .reply .reply__column:first-child {
@@ -141,6 +176,7 @@
     border-radius: 23px;
     background-color: #f8f7f6;
     border: 1.5px solid rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
 }
 
 .reply__column input::placeholder {
@@ -178,4 +214,25 @@
 .reply__column button:focus,
 .reply__column button:active {
     outline: none;
+}
+
+.reply .reply__column:first-child,
+.reply .smile,
+.reply button {
+    transition: opacity 0.3s ease-in-out;
+}
+
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within .smile,
+.reply:focus-within button {
+    opacity: 0;
+}
+
+.reply:focus-within input {
+    width: 86vw;
+    transform: translateX(-13%) translateY(-80px);
+}
+
+.reply:focus-within {
+    transform: translateY(80px);
 }
